Increase hero size to avoid page jumping

--- a/src/styles/bio.module.scss
+++ b/src/styles/bio.module.scss
@@ -38,7 +38,7 @@
 }
 
 .hero {
-  min-height: 80px;
+  min-height: 100px;
   line-height: 2.4rem;
   @media only screen and (min-width: 33.75em) {
     font-size: 64px;
